--- a/app/views/diagnoses/index.html.erb
+++ b/app/views/diagnoses/index.html.erb
@@ -1,1 +1,3 @@
-<h1 class="text-4xl text-green-700 font-semibold underline">Hello,world</h1>
+<div class="start-button-container">
+      <%= link_to '診断スタート', new_diagnosis_path, class: 'start-button' %>
+</div>
