ビュー、コントローラー追記

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
   </head>
 
   <body>
-    <div class="bg-indigo-950 text-white">
+    <div class="bg-indigo-950">
       <%= yield %>
     </div>
   </body>
