--- a/app/views/umagacha/index.html.erb
+++ b/app/views/umagacha/index.html.erb
@@ -1,7 +1,8 @@
 <div style="min-height: 100vh; display: flex; justify-content: center; align-items: center; flex-direction: column; text-align: center;">
-  <h1 class= "text-4xl font-serif ">UMAガチャ<br>～未知との遭遇～</h1>
+  <h1 class= "text-4xl text-red-700 font-bold font-serif">UMAガチャ</h1>
+  <h2 class= "text-red-700 font-serif">～未知との遭遇～</h2>
   <%= image_tag "forest.png", size: "360x480", alt: "森", class: "mt-4"%>
-  <p class="mt-4">今日はどんなUMAに出会えるかな？</p>
+  <p class="mt-4 text-white">今日はどんなUMAに出会えるかな？</p>
   <div class="mt-4">
     <%= button_to "UMAを探しに行く", result_path(times: 1), class: "bg-black text-white p-2 rounded" %>
   </div>
