コントローラー、フッター編集

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,7 @@
   <body>
     <div class="bg-indigo-950">
       <%= yield %>
+      <%= render 'shared/footer' %>
     </div>
   </body>
 </html>
