--- a/app/views/umagacha/index.html.erb
+++ b/app/views/umagacha/index.html.erb
@@ -4,6 +4,6 @@
   <%= image_tag "forest.png", size: "360x480", alt: "森", class: "mt-4"%>
   <p class="mt-4 text-white">今日はどんなUMAに出会えるかな？</p>
   <div class="mt-4">
-    <%= button_to "UMAを探しに行く", result_path(times: 1), class: "bg-black text-white p-2 rounded" %>
+    <%= button_to "UMAを探しに行く", result_path, class: "bg-black text-white p-2 rounded" %>
   </div>
 </div> 
