summary_large_imageに変更

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,7 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
     <%= favicon_link_tag('favicon.ico') %>
 
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="UMAガチャ" />
-    <meta name="twitter:description" content="君もUMAを探しに行こう!" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image" content="<%= image_url('ogp.png') %>" />
     <meta property="og:title" content="UMAガチャ" />
     <meta property="og:description" content="君もUMAを探しに行こう!" />
